# gaussian_filters

./: README.md
gaussianfilter/: CMakeLists.txt  Doxyfile
gaussianfilter/cmake/: CPM.cmake
gaussianfilter/filter/include/filter/: filter.hpp
gaussianfilter/filter/src/: filter.cpp
gaussianfilter/prj.test/: test.cpp
